[gd_scene load_steps=20 format=2]

[ext_resource path="res://Sprites/SeekerBazooka/SPRITES/exp2d0.png" type="Texture" id=1]
[ext_resource path="res://Sprites/SeekerBazooka/SPRITES/exp2e0.png" type="Texture" id=2]
[ext_resource path="res://Sprites/SeekerBazooka/SPRITES/exp2j0.png" type="Texture" id=3]
[ext_resource path="res://Sprites/SeekerBazooka/SPRITES/exp2f0.png" type="Texture" id=4]
[ext_resource path="res://Sprites/SeekerBazooka/SPRITES/exp2g0.png" type="Texture" id=5]
[ext_resource path="res://Sprites/SeekerBazooka/SPRITES/exp2h0.png" type="Texture" id=6]
[ext_resource path="res://Sprites/SeekerBazooka/SPRITES/exp2i0.png" type="Texture" id=7]
[ext_resource path="res://Sprites/SeekerBazooka/SPRITES/qroka5.png" type="Texture" id=8]
[ext_resource path="res://Sprites/SeekerBazooka/SPRITES/exp2a0.png" type="Texture" id=9]
[ext_resource path="res://Sprites/SeekerBazooka/SPRITES/exp2b0.png" type="Texture" id=10]
[ext_resource path="res://Sprites/SeekerBazooka/SPRITES/exp2c0.png" type="Texture" id=11]
[ext_resource path="res://Sprites/SeekerBazooka/SPRITES/exp2m0.png" type="Texture" id=12]
[ext_resource path="res://Sprites/SeekerBazooka/SPRITES/exp2n0.png" type="Texture" id=13]
[ext_resource path="res://Sprites/SeekerBazooka/SPRITES/exp2l0.png" type="Texture" id=14]
[ext_resource path="res://Sprites/SeekerBazooka/SPRITES/exp2k0.png" type="Texture" id=15]
[ext_resource path="res://Scenes/Rocket.gd" type="Script" id=16]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 8 ) ],
"loop": true,
"name": "rocket",
"speed": 5.0
}, {
"frames": [ ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 1 ), ExtResource( 2 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 3 ), ExtResource( 15 ), ExtResource( 14 ), ExtResource( 12 ), ExtResource( 13 ) ],
"loop": true,
"name": "explode",
"speed": 15.0
} ]

[sub_resource type="SphereShape" id=2]
radius = 0.310133

[sub_resource type="SphereShape" id=3]
radius = 2.03221

[node name="Rocket" type="Area"]
script = ExtResource( 16 )

[node name="AnimatedSprite3D" type="AnimatedSprite3D" parent="."]
transform = Transform( 3, 0, 0, 0, 3, 0, 0, 0, 3, 0, 0, 0 )
billboard = 2
frames = SubResource( 1 )
animation = "rocket"
playing = true

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 2 )

[node name="SplashDamage" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="SplashDamage"]
shape = SubResource( 3 )

[connection signal="body_entered" from="." to="." method="_on_Rocket_body_entered"]
[connection signal="body_entered" from="SplashDamage" to="." method="_on_SplashDamage_body_entered"]
